@@ -5,7 +5,8 @@ pod_spelling_system:
   # (regardless of what spell check thinks)
   # or stuff that I like to spell incorrectly
   # intentionally
-  stopwords: []
+  stopwords:
+    - Etheridge
 
 pod_coverage:
   skip: 0
@@ -14,3 +15,4 @@ pod_coverage:
   private:
     - Dist::Zilla::Plugin::FFI
     - Dist::Zilla::Plugin::FFI::Build
+    - Dist::Zilla::Plugin::FFI::CheckLib
