@@ -3,7 +3,7 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2018
-version          = 0.01
+version          = 1.01
 
 [@Author::Plicease]
 :version       = 2.26
