@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Merged Dist-Zilla-Plugin-FFI-CheckLib into this dist.
+    (see Changes.Dist-Zilla-Plugin-FFI-CheckLib for changes
+    for that module)
 
 0.01      2018-08-09 05:34:49 -0400
   - initial version
